--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Check Python syntax
         run: |
-          python -m py_compile streamlit_app.py ingest.py
+          python -m py_compile streamlit_app.py scripts/ingest.py
           python -m py_compile app/*.py
           python -m py_compile tabs/*.py
 
