--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install ruff pytest
+          pip install ruff
 
       - name: Lint with Ruff
         run: |
@@ -32,15 +32,6 @@ jobs:
 
       - name: Check Python syntax
         run: |
-          python -m py_compile streamlit_app.py scripts/ingest.py
+          python -m py_compile streamlit_app.py
           python -m py_compile app/*.py
           python -m py_compile tabs/*.py
-
-      - name: Run dbt compile check
-        working-directory: olist_dbt
-        env:
-          MOTHERDUCK_TOKEN: ${{ secrets.MOTHERDUCK_TOKEN }}
-        run: |
-          pip install dbt-duckdb
-          dbt deps
-          dbt compile
