Add Playwright-based keep-alive to click wake-up button

--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,7 +2,7 @@ name: Keep App Alive
 
 on:
   schedule:
-    # Run every 12 hours to prevent Streamlit Cloud from sleeping
+    # Run every 6 hours to prevent Streamlit Cloud from sleeping
     - cron: '0 */6 * * *'
   workflow_dispatch:  # Allow manual triggering
 
@@ -11,28 +11,70 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install Playwright
+        run: |
+          npm init -y
+          npm install playwright
+          npx playwright install chromium
+
       - name: Wake up Streamlit app
         run: |
-          echo "🔄 Waking up Streamlit Cloud app..."
+          node << 'EOF'
+          const { chromium } = require('playwright');
 
-          # Replace with your actual Streamlit app URL
-          APP_URL="https://olist-analytics-platform.streamlit.app"
+          (async () => {
+            console.log('🔄 Starting browser to wake up Streamlit app...');
 
-          # First request - wake up the app
-          curl -sSf --max-time 120 \
-            -H "User-Agent: GitHub-Actions-KeepAlive" \
-            -o /dev/null \
-            "$APP_URL" || echo "Initial wake-up request sent"
+            const browser = await chromium.launch({ headless: true });
+            const page = await browser.newPage();
 
-          # Wait for app to spin up
-          echo "⏳ Waiting 30 seconds for app to initialize..."
-          sleep 30
+            try {
+              // Navigate to the app
+              console.log('📍 Navigating to app...');
+              await page.goto('https://olist-analytics-platform.streamlit.app', {
+                waitUntil: 'networkidle',
+                timeout: 120000
+              });
 
-          # Verify app is responding
-          echo "✅ Verifying app is awake..."
-          curl -sSf --max-time 60 \
-            -H "User-Agent: GitHub-Actions-KeepAlive" \
-            -o /dev/null \
-            "$APP_URL" && echo "✅ App is awake!" || echo "⚠️ App may still be warming up"
+              // Check if app is sleeping
+              const sleepButton = await page.$('button:has-text("Yes, get this app back up")');
 
-          echo "🎉 Keep-alive completed at $(date -u)"
+              if (sleepButton) {
+                console.log('😴 App is sleeping, clicking wake-up button...');
+                await sleepButton.click();
+
+                // Wait for app to load
+                console.log('⏳ Waiting for app to wake up...');
+                await page.waitForTimeout(60000);
+
+                // Verify app is awake by checking for content
+                await page.waitForSelector('body', { timeout: 60000 });
+                console.log('✅ App is now awake!');
+              } else {
+                console.log('✅ App is already awake!');
+              }
+
+              // Take a screenshot for verification
+              await page.screenshot({ path: 'app-status.png' });
+
+            } catch (error) {
+              console.log('⚠️ Error:', error.message);
+            } finally {
+              await browser.close();
+              console.log('🎉 Keep-alive job completed!');
+            }
+          })();
+          EOF
+
+      - name: Upload screenshot
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: app-screenshot
+          path: app-status.png
+          retention-days: 1
